- Changed the way interface width changes, now its based on CSS instead of JS (Allows easier control) - Changed Navigation spacing (less empty space now) - Added behavior that hides System UI by clicking anywhere else on the page - Added Option to add custom navigation links (nvram set web_nav = '{ "Custom Category" : { "Link 1": "admin-access.asp", "Link 2": "admin-iptraffic.asp" }}') - Removed CSS based preloader while loading page (Mouse cursor changes to "wait" state instead) - Fixed issue on admin-config page that duplicated fields when changing backup name - Fixed issue with restore IP Traffic & Bandwidth pages (I wasn't able to test properly)

--- a/release/src/router/www/css/metro.css
+++ b/release/src/router/www/css/metro.css
@@ -22,10 +22,10 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 { font-size: 24px; }
-h2 { font-size: 26px; }
-h3 { font-size: 24px; }
-h4 { font-size: 22px; }
-h5 { font-size: 18px; }
+h2 { font-size: 22px; }
+h3 { font-size: 20px; }
+h4 { font-size: 18px; }
+h5 { font-size: 15px; }
 
 a {
     color: #377796;
